testdata/kube/apis/extensions/v1beta1/ingresses/default/app-default.json
{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"name":"app1"},"spec":{"rules":[{"host":"app-default.example.org","http":{"paths":[{"backend":{"serviceName":"app1-svc","servicePort":80}}]}}]}}
